GtkScrollBar: Fix for Webkit2 2.10.5
In Epiphany and Webkit2 2.10.5, the trough border was drawn with
"thin black line", so stop using semi-transparent colour setting.

--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1615,7 +1615,10 @@ $_slider_fine_tune_margin: 6px;
   // trough coloring
   .trough {
     background-color: $base_color;
-    border: 1px none $borders_color;
+    // fix for Webkit2 2.10.5, use absolute colour codes
+    // for $borders_color / $base_color;
+    border: if($variant=='light', 1px none #E5E9EC,
+                                  1px none #3B4D55);
   }
 
   // slider coloring
