--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -1373,7 +1373,7 @@ column-header.button.dnd, column-header .button.dnd {
     background-color: rgba(69, 90, 100, 0.8); }
   .scrollbar .trough {
     background-color: #455A64;
-    border: 1px none rgba(0, 0, 0, 0.15); }
+    border: 1px none #3B4D55; }
   .scrollbar .slider {
     background-color: rgba(236, 239, 241, 0.6); }
     .scrollbar .slider:hover {
