--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1373,7 +1373,7 @@ column-header.button.dnd, column-header .button.dnd {
     background-color: rgba(255, 255, 255, 0.8); }
   .scrollbar .trough {
     background-color: #FFFFFF;
-    border: 1px none rgba(0, 0, 0, 0.1); }
+    border: 1px none #E5E9EC; }
   .scrollbar .slider {
     background-color: rgba(38, 50, 56, 0.6); }
     .scrollbar .slider:hover {
